# example-project

./: .pre-commit-config.yaml  .release-please-manifest.json  README.md  release-please-config.json
.github/: labeler.yml
.github/actions/add_tags/: README.md  action.yml  index.js  package.json
.github/actions/add_tags/src/: GitHubRepository.js  Package.js
.github/actions/add_tags/src/PackageParser/: PackageParser.js
.github/workflows/: deploy-cli.yml  deploy-explorer.yml  labeler.yml  release-please.yml  test-cli.yml  test-explorer.yml  tests.yml
cli/: CHANGELOG.md  README.md  pyproject.toml
cli/schematools/compiler/: RegexCompiler.py
cli/schematools/validator/: RegexValidator.py
explorer/: CHANGELOG.md  README.md  pyproject.toml
explorer/schemaexplorer/page/generator/: PageGenerator.py
